[package]
name = "mimble_wallet_api"
version = "3.2.2"
authors = ["Mimble Developers <Forkladdgud@protonmail.com>"]
description = "Grin Wallet API"
license = "Apache-2.0"
repository = "https://github.com/MimbleCoin/mimble-wallet"
keywords = [ "crypto", "grin", "mimblewimble" ]
exclude = ["**/*.grin", "**/*.grin2"]
edition = "2018"

[dependencies]
failure = "0.1"
failure_derive = "0.1"
log = "0.4"
uuid = { version = "0.7", features = ["serde", "v4"] }
serde = "1"
rand = "0.6"
serde_derive = "1"
serde_json = "1"
easy-jsonrpc-mw = "0.5.3"
chrono = { version = "0.4.4", features = ["serde"] }
ring = "0.16"
base64 = "0.9"
ed25519-dalek = "1.0.0-pre.1"
colored = "1.6"

mimble_wallet_libwallet = { path = "../libwallet", version = "3.2.2" }
mimble_wallet_config = { path = "../config", version = "3.2.2" }
mimble_wallet_impls = { path = "../impls", version = "3.2.2" }
mimble_wallet_util = { path = "../util", version = "3.2.2" }

[dev-dependencies]
serde_json = "1"
tempfile = "3.0.7"
