[package]
name = "mimble_wallet_config"
version = "3.2.2"
authors = ["Mimble Developers <Forkladdgud@protonmail.com>"]
description = "Configuration for grin wallet , a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/MimbleCoin/mimble-wallet"
keywords = [ "crypto", "mimble", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.5"
serde = "1"
failure = "0.1"
failure_derive = "0.1"
dirs = "1"
toml = "0.4"
serde_derive = "1"

mimble_wallet_util = { path = "../util", version = "3.2.2" }

[dev-dependencies]
pretty_assertions = "0.5.1"
