[package]
name = "mimble_wallet_impls"
version = "3.2.2"
authors = ["Mimble Developers <Forkladdgud@protonmail.com>"]
description = "Concrete types derived from libwallet traits"
license = "Apache-2.0"
repository = "https://github.com/MimbleCoin/mimble-wallet"
keywords = [ "crypto", "grin", "mimblewimble" ]
exclude = ["**/*.grin", "**/*.grin2"]
edition = "2018"

[dependencies]
blake2-rfc = "0.2"
failure = "0.1"
failure_derive = "0.1"
futures = "0.3"
rand = "0.5"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
ring = "0.16"
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.7", features = ["serde", "v4"] }
chrono = { version = "0.4.4", features = ["serde"] }
crossbeam-utils = "0.7"
url = "1.7"
lazy_static = "1"
bitcoin = { version = "0.19", git = "https://github.com/mwcproject/rust-bitcoin", branch = "zkp", features = ["bitcoinconsensus"] }

nanoid = "0.1.3"
reqwest = "0.9.22"

#http client (copied from grin)
http = "0.1.5"
hyper-timeout = "0.3"

#Socks/Tor
byteorder = "1"
hyper = "0.13"
hyper-socks2 = "0.4"
ed25519-dalek = "1.0.0-pre.1"
data-encoding = "2"
regex = "1.3"
timer = "0.2"
sysinfo = "0.9"

mimble_wallet_util = { path = "../util", version = "3.2.2" }
mimble_wallet_config = { path = "../config", version = "3.2.2" }
mimble_wallet_libwallet = { path = "../libwallet", version = "3.2.2" }


# Release
#mimble_p2p = { git = "https://github.com/MimbleCoin/mimble-node", tag = "3.2.2" }
#mimble_core = { git = "https://github.com/MimbleCoin/mimble-node", tag = "3.2.2" }
#mimble_api = { git = "https://github.com/MimbleCoin/mimble-node", tag = "3.2.2" }
#mimble_util = { git = "https://github.com/MimbleCoin/mimble-node", tag = "3.2.2"  }

# For bleeding edge
mimble_p2p = { git = "https://github.com/MimbleCoin/mimble-node", branch = "master" }
mimble_core = { git = "https://github.com/MimbleCoin/mimble-node", branch = "master" }
mimble_api = { git = "https://github.com/MimbleCoin/mimble-node", branch = "master" }
mimble_util = { git = "https://github.com/MimbleCoin/mimble-node", branch = "master"  }
mimble_keychain = { git = "https://github.com/MimbleCoin/mimble-node", branch = "master" }

# For local testing
#mimble_p2p = { path = "../../mimble-node/p2p"}
#mimble_core = { path = "../../mimble-node/core"}
#mimble_api = { path = "../../mimble-node/api"}
#mimble_util = { path = "../../mimble-node/util"}

[target.'cfg(not(target_os = "android"))'.dependencies]
hyper-rustls = { version = "0.20", default-features = false}

[target.'cfg(target_os = "android")'.dependencies]
hyper-rustls = { version = "0.20", default-features = false,  features = ["webpki-tokio"] }
