[package]
name = "mimble_wallet_util"
version = "3.2.2"
authors = ["Mimble Developers <Forkladdgud@protonmail.com>"]
description = "Util, for generic utilities and to re-export grin crates"
license = "Apache-2.0"
repository = "https://github.com/MimbleCoin/mimble-node-wallet"
keywords = [ "crypto", "grin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.6"
serde = "1"
serde_derive = "1"
ed25519-dalek = "1.0.0-pre.1"
data-encoding = "2"
sha3 = "0.8"
failure = "0.1"
failure_derive = "0.1"

# For Release
#mimble_core = { git = "https://github.com/MimbleCoin/mimble-node", tag = "3.2.2" }
#mimble_keychain = { git = "https://github.com/MimbleCoin/mimble-node", tag = "3.2.2" }
#mimble_chain = { git = "https://github.com/MimbleCoin/mimble-node", tag = "3.2.2" }
#mimble_util = { git = "https://github.com/MimbleCoin/mimble-node", tag = "3.2.2" }
#mimble_api = { git = "https://github.com/MimbleCoin/mimble-node", tag = "3.2.2" }
#mimble_store = { git = "https://github.com/MimbleCoin/mimble-node", tag = "3.2.2" }

# For beta release
# mimble_core = { git = "https://github.com/MimbleCoin/mimble-node", tag = "2.4.0" }
# mimble_keychain = { git = "https://github.com/MimbleCoin/mimble-node", tag = "2.4.0" }
# mimble_chain = { git = "https://github.com/MimbleCoin/mimble-node", tag = "2.4.0" }
# mimble_util = { git = "https://github.com/MimbleCoin/mimble-node", tag = "2.4.0" }
# mimble_api = { git = "https://github.com/MimbleCoin/mimble-node", tag = "2.4.0" }
# mimble_store = { git = "https://github.com/MimbleCoin/mimble-node", tag = "2.4.0" }

# For bleeding edge
mimble_core = { git = "https://github.com/MimbleCoin/mimble-node", branch = "master" }
mimble_keychain = { git = "https://github.com/MimbleCoin/mimble-node", branch = "master" }
mimble_chain = { git = "https://github.com/MimbleCoin/mimble-node", branch = "master" }
mimble_util = { git = "https://github.com/MimbleCoin/mimble-node", branch = "master" }
mimble_api = { git = "https://github.com/MimbleCoin/mimble-node", branch = "master" }
mimble_store = { git = "https://github.com/MimbleCoin/mimble-node", branch = "master" }

# For local testing
#mimble_core = { path = "../../mimble-node/core"}
#mimble_keychain = { path = "../../mimble-node/keychain"}
#mimble_chain = { path = "../../mimble-node/chain"}
#mimble_util = { path = "../../mimble-node/util"}
#mimble_api = { path = "../../mimble-node/api"}
#mimble_store = { path = "../../mimble-node/store"}

[dev-dependencies]
pretty_assertions = "0.5.1"
